--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tool-name",
+  "name": "xlsx-helper",
   "author": "wsafight",
   "version": "0.0.1",
   "license": "MIT",
@@ -19,7 +19,8 @@
     "lint": "dts lint",
     "prepare": "dts build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "serve": "serve -s demo"
   },
   "peerDependencies": {},
   "husky": {
@@ -34,14 +35,14 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "module": "dist/tool-name.esm.js",
+  "module": "dist/xlsx-helper.esm.js",
   "size-limit": [
     {
-      "path": "dist/tool-name.cjs.production.min.js",
+      "path": "dist/xlsx-helper.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/tool-name.esm.js",
+      "path": "dist/xlsx-helper.esm.js",
       "limit": "10 KB"
     }
   ],
@@ -51,6 +52,7 @@
     "size-limit": "8.1.1",
     "dts-cli": "1.6.3",
     "tslib": "2.4.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "serve": "14.2.0"
   }
 }
